--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@700&family=Work+Sans&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@700&family=Work+Sans&display=swap");
+
 :root {
   --primary: #3a3a3a;
   --secondary: #e02c6d;
@@ -12,6 +14,10 @@
   font-family: "Poppins", sans-serif;
   user-select: none;
   overflow-x: hidden;
+}
+
+.hide {
+  display: none !important;
 }
 /* header section start */
 .header {
@@ -108,7 +114,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 120px 0;
+  margin: 120px 0 50px 0;
 }
 .sponsor-logo-container .sponser-inner {
   display: flex;
@@ -129,11 +135,89 @@
   margin: 36px 0;
 }
 
-/* .hr-div {
+/* collection section start */
+
+.collection-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-} */
+  align-items: center;
+}
+.collection-container .title {
+  font-weight: 600;
+  font-size: 28px;
+  color: var(--primary);
+  text-align: center;
+}
+
+.collection-card-container {
+  margin-top: 60px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  place-self: center;
+  padding: 15px 15px;
+  /* background-color: #ffffff; */
+}
+.collection-card-container .card {
+  width: 250px;
+  /* height: 430px; */
+  /* border: 1px solid red; */
+  box-shadow: 0 0 0 2px #ffffff, 0.3em 0.3em 1em rgba(107, 106, 105, 0.3);
+  border-radius: 5px;
+  padding: 15px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+.collection-card-container .card img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.collection-container .card-title {
+  color: #18191f;
+  font-weight: 600;
+  font-size: 20px;
+  font-family: "Inter";
+}
+
+.collection-container .card-price {
+  color: rgba(0, 0, 0, 0.87);
+  font-style: normal;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.collection-container .rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 10px;
+  font-weight: 700;
+  font-family: "Inter";
+}
+.collection-container .star {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.collection-container .itag {
+  color: #fb8200;
+}
+.collection-container .rating span {
+  color: #5e6366;
+}
+
+.card-details-p {
+  color: #787885;
+  font-weight: 700;
+  font-size: 10px;
+  width: 50%;
+}
 
 /********************
     Media query start
@@ -261,5 +345,27 @@
   }
   .sponsor-logo-container hr {
     width: 100%;
+  }
+}
+
+/* popular collection media query */
+
+@media screen and (max-width: 576px) {
+  .collection-card-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .collection-card-container .card {
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 920px) {
+  .collection-card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .collection-card-container .card {
+    width: 90%;
   }
 }
